--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -42,7 +42,7 @@ Template para el perfil de cada usuario
     <div class="row">
         <div class="col l5 m12 12 default-div compose-div share-publication-div" id="share-publication-wrapper" data-id="">
             <div class="row">
-                <div id="status" class="col s12 title-page-wrapper">
+                <div class="col s12 title-page-wrapper">
                     <h4><i class="fa fa-quote-right" aria-hidden="true"></i> Citar publicacion</h4>
                     <h6>Comparte esta publicación con tus seguidores</h6>
                 </div>
