--- a/photologue/templates/photologue/new_reply.html
+++ b/photologue/templates/photologue/new_reply.html
@@ -1,9 +1,9 @@
 <div class="hidden" id="caja-comentario-{{ node.pk }}">
     <!-- REPLY FORM -->
-    <form class="reply-form" action="" method="post">{% csrf_token %}
-        <input id="id_author" name="p_author" type="hidden" value="{{ request.user.id }}">
-        <input id="id_board_photo" name="board_photo" type="hidden" value="{{ photo.id }}">
-        <input id="id_parent" name="parent" type="hidden">
+    <form class="reply-form" method="post">{% csrf_token %}
+        <input name="p_author" type="hidden" value="{{ request.user.id }}">
+        <input name="board_photo" type="hidden" value="{{ photo.id }}">
+        <input name="parent" type="hidden">
         <div class="row">
             <div class="col s12">
                 <div class="row">
@@ -16,7 +16,7 @@
                     <div class="file-field input-field col s12">
                         <div class="btn">
                             <span>Imágenes</span>
-                            <input id="id_image_reply" name="image" type="file" multiple>
+                            <input name="image" type="file" multiple>
                         </div>
                         <div class="file-path-wrapper">
                             <input class="file-path validate" type="text" placeholder="Upload one or more files">
