--- a/photologue/templates/photologue/publications_entries.html
+++ b/photologue/templates/photologue/publications_entries.html
@@ -15,7 +15,7 @@
                   data-tooltip="Ver conversación completa"><i class="fa fa-plus-square-o" aria-hidden="true"></i></span>
                         {% if user.id == node.p_author.id %}
                             {% if node.event_type == 1 or node.event_type == 3 %}
-                                <span data-id="{{ node.pk }}" id="edit-comment-content"
+                                <span data-id="{{ node.pk }}"
                                       class="top-options edit-comment tooltipped"
                                       data-position="bottom"
                                       data-delay="50"
@@ -41,7 +41,7 @@
                                                 </span>
                                             {% endif %}
                                         </h2>
-                                       <p id="pub-created" class="blue-text text-darken-2">{{ node.created|naturaltime }}</p>
+                                       <p class="blue-text text-darken-2 pub-created">{{ node.created|naturaltime }}</p>
                                         <div class="row publication-content">
                                             <div class="parrafo comment">
                                                 <div class="wrp-comment">{{ node.content|safe }}</div>
@@ -102,7 +102,7 @@
                     <div class="row">
                         <div class="divider"></div>
                         <!-- OPCIONES DE COMENTARIOS -->
-                        <div class="options_comentarios" id="options-comments">
+                        <div class="options_comentarios">
                             <ul class="opciones">
                                 {% if   user.id == node.p_author.id %}
                                     {% comment %} Si estamos visitando un perfil que no es el nuestro {% endcomment %}
@@ -137,8 +137,8 @@
                 </div>
                 {% if user.id == node.p_author.id %}
                     {% if node.event_type == 1  or node.event_type == 3 %}
-                        <div data-user-id="{{ node.p_author.pk }}" id="author-controls-{{ node.pk }}"
-                             class="author-controls">
+                        <div data-user-id="{{ node.p_author.pk }}" id="p_author-controls-{{ node.pk }}"
+                             class="p_author-controls">
                             <div class="row">
                                 <div class="col s12">
                                     <form method="post" accept-charset="utf-8">{% csrf_token %}
@@ -155,7 +155,7 @@
                                                 <div class="row">
                                                     <button data-id="{{ node.pk }}"
                                                             class="waves-effect waves-light btn blue darken-1 right edit-comment-btn"
-                                                            type="button" id="submit_edit_publication">Editar
+                                                            type="button">Editar
                                                         <i class="material-icons right">mode_edit</i>
                                                     </button>
                                                 </div>
@@ -177,16 +177,14 @@
                             <div class="col s12">
                                 {% with node.get_children_count as descendants %}
                                         {% if descendants > 0 %}
-                                            <a class="waves-effect waves-light btn-large blue darken-1 white-text center"
+                                            <a class="waves-effect waves-light btn-large blue darken-1 white-text center load_more_descendants"
                                                href="#"
-                                               id="load_more_descendants"
                                                data-id="{{ node.id }}" data-created="{{ node.created|date:"U"}}"><i class=" material-icons left">expand_more</i>Cargar
-                                                comentarios (<span
-                                                        id="child_count">{{ descendants }}</span>)</a>
+                                                comentarios (<span class="child_count">{{ descendants }}</span>)</a>
                                         {% endif %}
                                     {% endwith %}
                                 <div>
-                                    <div class="progress" id="load_publications_descendants" style="display: none">
+                                    <div class="progress load_publications_descendants" style="display: none">
                                         <div class="indeterminate blue darken-1"></div>
                                     </div>
                                 </div>
