--- a/skyfolk/templates/account/new_reply.html
+++ b/skyfolk/templates/account/new_reply.html
@@ -3,10 +3,10 @@ Nueva respuesta a una publicacion
 {% endcomment %}
 <div class="hidden" id="caja-comentario-{{ node.pk }}">
     <!-- REPLY FORM -->
-    <form class="reply-form" action="" method="post">{% csrf_token %}
-        <input id="id_author" name="author" type="hidden" value="{{ request.user.id }}">
-        <input id="id_board_owner" name="board_owner" type="hidden" value="{{ user_profile.id }}">
-        <input id="id_parent" name="parent" type="hidden">
+    <form class="reply-form" method="post">{% csrf_token %}
+        <input name="author" type="hidden" value="{{ request.user.id }}">
+        <input name="board_owner" type="hidden" value="{{ user_profile.id }}">
+        <input name="parent" type="hidden">
         <div class="row">
             <div class="col s12">
                 <div class="row">
@@ -19,7 +19,7 @@ Nueva respuesta a una publicacion
                     <div class="file-field input-field col s12">
                         <div class="btn">
                             <span>Imágenes</span>
-                            <input id="id_image_reply" name="image" type="file" multiple>
+                            <input name="image" type="file" multiple>
                         </div>
                         <div class="file-path-wrapper">
                             <input class="file-path validate" type="text" placeholder="Upload one or more files">
