--- a/skyfolk/templates/account/new_reply_extend_publication.html
+++ b/skyfolk/templates/account/new_reply_extend_publication.html
@@ -3,10 +3,10 @@ Nueva respuesta a una publicacion
 {% endcomment %}
 <div class="hidden" id="caja-comentario-{{ node.pk }}">
     <!-- REPLY FORM -->
-    <form class="reply-form" action="" method="post">{% csrf_token %}
-        <input id="id_author" name="author" type="hidden" value="{{ request.user.id }}">
-        <input id="id_board_owner" name="board_owner" type="hidden" value="{{ node.board_owner.id }}">
-        <input id="id_parent" name="parent" type="hidden">
+    <form class="reply-form" method="post">{% csrf_token %}
+        <input name="author" type="hidden" value="{{ request.user.id }}">
+        <input name="board_owner" type="hidden" value="{{ node.board_owner.id }}">
+        <input name="parent" type="hidden">
         <div class="row">
             <div class="col s12">
                 <div class="row">
