--- a/skyfolk/templates/account/notification-right-menu.html
+++ b/skyfolk/templates/account/notification-right-menu.html
@@ -18,7 +18,7 @@ Menu de notificaciones verticales
         {% if user_notifications %}
             {% for notification in user_notifications %}
                 <li class="collection-item avatar" data-id="{{ notification.id }}">
-                    <a onclick="AJAX_mark_read(this)" class="fa fa-remove" id="mark-as-read-notification"
+                    <a onclick="AJAX_mark_read(this)" class="fa fa-remove"
                        data-notification="{{ notification.slug }}"></a>
                     <div class="circle">
                         {% avatar notification.actor %}
