--- a/skyfolk/static/css/group_profile.css
+++ b/skyfolk/static/css/group_profile.css
@@ -1,3 +1,17 @@
+.group-tool {
+  width: 90px;
+  cursor: pointer;
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-top: 11px;
+  margin-right: auto;
+  -webkit-transition: 0.5s;
+  -moz-transition: 0.5s;
+  -o-transition: 0.5s;
+  transition: 0.5s; }
+
 .informacion > .group-comment, .informacion > .group-like, .informacion > .group-follow {
   cursor: pointer;
   float: left;
