--- a/skyfolk/static/sass/group_profile.sass
+++ b/skyfolk/static/sass/group_profile.sass
@@ -1,6 +1,20 @@
 $blueskyfolk: #1e88e5
 $greycolor: #eeeeee
 
+.group-tool
+  width: 90px
+  cursor: pointer
+  position: absolute
+  left: 0
+  right: 0 
+  margin-left: auto
+  margin-top: 11px
+  margin-right: auto
+  -webkit-transition: .5s
+  -moz-transition: .5s
+  -o-transition: .5s
+  transition: .5s
+  
 .informacion
   > .group-comment, > .group-like, > .group-follow
     cursor: pointer
