--- a/skyfolk/templates/groups/followers_page.html
+++ b/skyfolk/templates/groups/followers_page.html
@@ -16,8 +16,8 @@
                         <i class="fa fa-user fa-2x like-him">
                         </i>
                         <div class="bg-user">
-                            <div onclick="location.href='/profile/{{ item.user.username }}'"
-                                 class="profile-user-bg">{% avatar item.user.username %}</div>
+                            <div onclick="location.href='/profile/{{ item.username }}'"
+                                 class="profile-user-bg">{% avatar item.username %}</div>
                         </div>
                     </div>
                 </div>
@@ -25,9 +25,8 @@
             <div class="row">
                 <div class="col s12">
                     <div class="name-friend">
-                        <a href="/profile/{{ item.user.username }}">@{{ item.user.username }}
-                            ({{ item.get_rol_verbose }})</a><br><br>
-                        <p>{{ item.user.first_name }} {{ item.user.last_name }}</p>
+                        <a href="/profile/{{ item.username }}">@{{ item.username }}</a><br><br>
+                        <p>{{ item.first_name }} {{ item.last_name }}</p>
                     </div>
                 </div>
             </div>
