--- a/skyfolk/static/sass/group_profile.sass
+++ b/skyfolk/static/sass/group_profile.sass
@@ -5,8 +5,8 @@ $greycolor: #eeeeee
   width: 90px
   cursor: pointer
   position: absolute
-  left: 0
-  right: 0 
+  left: -20px
+  right: 0
   margin-left: auto
   margin-top: 11px
   margin-right: auto
@@ -14,6 +14,13 @@ $greycolor: #eeeeee
   -moz-transition: .5s
   -o-transition: .5s
   transition: .5s
+
+.group-info
+  color: #555
+  .group-name
+    font-size: 1.6em
+  .group-description
+    font-size: 1.2em
   
 .informacion
   > .group-comment, > .group-like, > .group-follow
