--- a/skyfolk/templates/groups/group_profile.html
+++ b/skyfolk/templates/groups/group_profile.html
@@ -28,16 +28,11 @@
                                     <a><i class="fa fa-thumb-tack"></i></a>
                                 </div>
                                 <ul class="unstyled table fullwidth links">
-                                    <li class="tab" id="li-tab-timeline"><a href="#tab-timeline">timeline</a></li>
                                     <li class="tab" id="li-tab-comentarios"><a
-                                            href="#tab-comentarios">Comentarios</a></li>
+                                            href="#tab-comentarios">Skyline</a></li>
                                     <li class="tab" id="li-tab-amigos"><a href="#tab-amigos">Usuarios</a></li>
                                 </ul>
                                 <div class="unstyled content" id="hood-tabs">
-                                    {% comment %}
-                                            Incluimos el tab timeline
-                                     {% endcomment %}
-                                    {% include "groups/tab-timeline.html" %}
                                     {% comment %}
                                             Incluimos el tab comentarios
                                         {% endcomment %}
