--- a/skyfolk/static/css/group_profile.css
+++ b/skyfolk/static/css/group_profile.css
@@ -2,7 +2,7 @@
   width: 90px;
   cursor: pointer;
   position: absolute;
-  left: 0;
+  left: -20px;
   right: 0;
   margin-left: auto;
   margin-top: 11px;
@@ -11,6 +11,13 @@
   -moz-transition: 0.5s;
   -o-transition: 0.5s;
   transition: 0.5s; }
+
+.group-info {
+  color: #555; }
+  .group-info .group-name {
+    font-size: 1.6em; }
+  .group-info .group-description {
+    font-size: 1.2em; }
 
 .informacion > .group-comment, .informacion > .group-like, .informacion > .group-follow {
   cursor: pointer;
