--- a/skyfolk/templates/search/search.html
+++ b/skyfolk/templates/search/search.html
@@ -1,63 +1,63 @@
 {% extends 'account/base_search.html' %}
 {% comment %}
-  Template para las busquedas
+Template para las busquedas
 {% endcomment %}
 {% load app_filters %}
 {% load avatar_tags %}
 {% load humanize %}
 {% block title %} <title>Búsqueda en Skyfolk.</title> {% endblock %}
 {% block include_files %}
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/gallery.css" onload="if(media!='all')media='all'">
-    <!-- Estilos para la galeria de fotos -->
-    <style>
-        .notice-item {
-            box-shadow: 0 1px 5px rgba(0, 0, 0, 0.4);
-            border-radius: 7px;
-            margin-top: 5%;
-            overflow: hidden;
-        }
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/gallery.css">
+<!-- Estilos para la galeria de fotos -->
+<style>
+    .notice-item {
+        box-shadow: 0 1px 5px rgba(0, 0, 0, 0.4);
+        border-radius: 7px;
+        margin-top: 5%;
+        overflow: hidden;
+    }
 
-        .notice-item .img {
-            border-radius: 7px;
-            box-shadow: 0 1px 5px rgba(0, 0, 0, 0.4);
-        }
+    .notice-item .img {
+        border-radius: 7px;
+        box-shadow: 0 1px 5px rgba(0, 0, 0, 0.4);
+    }
 
-        .notice-item .img img {
-            width: 100%;
-            height: 100%;
-        }
+    .notice-item .img img {
+        width: 100%;
+        height: 100%;
+    }
 
-        .notice-item .contenido {
-            margin-top: 2.5%;
-            margin-bottom: 1.5%;
-            word-wrap: break-word;
-            line-height: 1.5rem;
-        }
+    .notice-item .contenido {
+        margin-top: 2.5%;
+        margin-bottom: 1.5%;
+        word-wrap: break-word;
+        line-height: 1.5rem;
+    }
 
-        .notice-item .author {
-            display: block;
-            margin-top: 1.25%;
-        }
+    .notice-item .author {
+        display: block;
+        margin-top: 1.25%;
+    }
 
-        .notice-item .author a {
-            text-decoration: none;
-            color: #1e88e5;
-            font-weight: 600;
-            margin-right: 2%;
-        }
+    .notice-item .author a {
+        text-decoration: none;
+        color: #1e88e5;
+        font-weight: 600;
+        margin-right: 2%;
+    }
 
-        .notice-item .author i {
-            color: gray;
-        }
+    .notice-item .author i {
+        color: gray;
+    }
 
-        .notice-item .pub-date {
-            margin-top: 2%;
-            display: block;
-        }
-    </style>
+    .notice-item .pub-date {
+        margin-top: 2%;
+        display: block;
+    }
+</style>
 {% endblock %}
 {% block content %}
-    <div class="container">
+<div class="container">
     <div class="row">
         <div class="col l12 m12 s12">
             <ul class="query-options">
@@ -82,176 +82,178 @@
         </div>
     </div>
     {% if object_list|length == 0 %}
-        <div class="row">
-            <div class="col s12">
-                <div class="noelements-search" id="search-noelements">
-                    <h5 class="">Sin resultados :-(</h5>
-                    <i class="not-query">No se obtuvo ningún resultado para:
-                        <b>{{ q }}</b>
-                    </i>
+    <div class="row">
+        <div class="col s12">
+            <div class="noelements-search" id="search-noelements">
+                <h5 class="">Sin resultados :-(</h5>
+                <i class="not-query">No se obtuvo ningún resultado para:
+                    <b>{{ q }}</b>
+                </i>
+            </div>
+        </div>
+    </div>
+    {% endif %}
+    {% if s == 'all' %}
+    <div class="row">
+        {% for item in object_list %}
+        {% if item.model_name == 'user' %}
+        <div class="col l3 m5 s12">
+            <div class="personal-card">
+                <div class="col s12">
+                    <div class="header">
+                        {% if item.profile.backImage %}
+                        <img class="back-profile-user" src="{{ item.profile.backImage.url }}">
+                        {% else %}
+                        <img class="back-profile-user" src="{{ STATIC_URL }}img/nuevo_back.png">
+                        {% endif %}
+                        <i class="fa fa-user fa-2x like-him">
+                        </i>
+                        <div class="bg-user">
+                            <div onclick="location.href='/profile/{{ item.author }}'"
+                                class="profile-user-bg">{% avatar item.author %}</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col s12">
+                    <div style="cursor: default" onclick="location.href='{% url "publications:publication_detail" publication_id=item.pk %}'" class="name-friend">
+                        <p>{{ item.object.username }}</p>
+                    </div>
                 </div>
             </div>
         </div>
-    {% endif %}
-    {% if s == 'all' %}
-        <div class="row">
-            {% for item in object_list %}
-                <div class="col l3 m5 s12">
-                    <div class="personal-card">
-                        <div class="col s12">
-                            <div class="header">
-                                {% if item.profile.backImage %}
-                                    <img class="back-profile-user" src="{{ item.profile.backImage.url }}">
-                                {% else %}
-                                    <img class="back-profile-user" src="{{ STATIC_URL }}img/nuevo_back.png">
-                                {% endif %}
-                                <i class="fa fa-user fa-2x like-him">
-                                </i>
-                                <div class="bg-user">
-                                    <div onclick="location.href='/profile/{{ item.author }}'"
-                                         class="profile-user-bg">{% avatar item.author %}</div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col s12">
-                            <div style="cursor: default" onclick="location.href='{% url "publications:publication_detail" publication_id=item.pk %}'" class="name-friend">
-                              {% if item.content %}
-                              <p>{{ item.content }}</p>
-                              {% elif item.url_image %}
-                              <p>{{ item.title }}</p>
-                                <img width="100%" src="{{ MEDIA_URL }}{{ item.url_image }}">
-                              {% endif %}
-                            </div>
-                        </div>
-                    </div>
+        {% elif item.model_name == 'publication' %}
+        <div class="col l3 m5 s12" style="box-shadow: 0 1px 5px rgba(0, 0, 0, 0.4);">
+            <div class="card">
+                <div class="card-content">
+                    <span class="card-title"><a href="/profile/{{ item.author }}">{% avatar item.author 60 class="img-circle" %} @{{ item.author }}</a></span>
+                    <p>{{ item.content|safe|truncatechars:"150" }}</p>
                 </div>
-            {% endfor %}
+                <div class="card-action right">
+                    <a class="blue-text text-darken-1" href="#">Ver</a>
+                    <a class="blue-text text-darken-1" href="#">OK</a>
+                </div>
+            </div>
         </div>
+        {% endif %} 
+        {% endfor %}
+    </div>
     {% endif %}
 
-      {% if s == 'accounts' %}
-        <div class="row">
-            {% for item in object_list %}
-                <div class="col l3 m5 s12">
-                    <div class="personal-card">
-                        <div class="col s12">
-                            <div class="header">
-                                {% if item.profile.backImage %}
-                                    <img class="back-profile-user" src="{{ item.profile.backImage.url }}">
-                                {% else %}
-                                    <img class="back-profile-user" src="{{ STATIC_URL }}img/nuevo_back.png">
-                                {% endif %}
-                                <i class="fa fa-user fa-2x like-him">
-                                </i>
-                                <div class="bg-user">
-                                    <div onclick="location.href='/profile/{{ item.username }}'"
-                                         class="profile-user-bg">{% avatar item.id %}</div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col s12">
-                            <div style="cursor: default" onclick="location.href='{% url "publications:publication_detail" publication_id=item.pk %}'" class="name-friend">
-                                <p>{{ item.object.username }}</p>
-                            </div>
+    {% if s == 'accounts' %}
+    <div class="row">
+        {% for item in object_list %}
+        <div class="col l3 m5 s12">
+            <div class="personal-card">
+                <div class="col s12">
+                    <div class="header">
+                        {% if item.profile.backImage %}
+                        <img class="back-profile-user" src="{{ item.profile.backImage.url }}">
+                        {% else %}
+                        <img class="back-profile-user" src="{{ STATIC_URL }}img/nuevo_back.png">
+                        {% endif %}
+                        <i class="fa fa-user fa-2x like-him">
+                        </i>
+                        <div class="bg-user">
+                            <div onclick="location.href='/profile/{{ item.username }}'"
+                                class="profile-user-bg">{% avatar item.id %}</div>
                         </div>
                     </div>
                 </div>
-            {% endfor %}
+                <div class="col s12">
+                    <div style="cursor: default" onclick="location.href='{% url "publications:publication_detail" publication_id=item.pk %}'" class="name-friend">
+                        <p>{{ item.object.username }}</p>
+                    </div>
+                </div>
+            </div>
         </div>
-        {% endif %}
+        {% endfor %}
+    </div>
+    {% endif %}
 
-      {% if s == 'publications' %}
-        <div class="row">
-            {% for item in object_list %}
-                <div class="col l3 m5 s12">
-                    <div class="personal-card">
-                        <div class="col s12">
-                            <div class="header">
-                                {% if item.profile.backImage %}
-                                    <img class="back-profile-user" src="{{ item.profile.backImage.url }}">
-                                {% else %}
-                                    <img class="back-profile-user" src="{{ STATIC_URL }}img/nuevo_back.png">
-                                {% endif %}
-                                <i class="fa fa-user fa-2x like-him">
-                                </i>
-                                <div class="bg-user">
-                                    <div onclick="location.href='/profile/{{ item.author }}'"
-                                         class="profile-user-bg">{% avatar item.author %}</div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col s12">
-                            <div style="cursor: default" onclick="location.href='{% url "publications:publication_detail" publication_id=item.pk %}'" class="name-friend">
-                                <p>{{ item.content }}</p>
-                            </div>
-                        </div>
-                    </div>
+    {% if s == 'publications' %}
+    <div class="row">
+        {% for item in object_list %}
+        <div class="col l3 m5 s12" style="box-shadow: 0 1px 5px rgba(0, 0, 0, 0.4);">
+            <div class="card">
+                <div class="card-content">
+                    <span class="card-title"><a href="/profile/{{ item.author }}">{% avatar item.author 60 class="img-circle" %} @{{ item.author }}</a></span>
+                    <p>{{ item.content|safe|truncatechars:"150" }}</p>
                 </div>
-            {% endfor %}
+                <div class="card-action right">
+                    <a class="blue-text text-darken-1" href="#">Ver</a>
+                    <a class="blue-text text-darken-1" href="#">OK</a>
+                </div>
+            </div>
         </div>
-      {% endif %}
+        {% endfor %}
+    </div>
+    {% endif %}
 
     {% if s == 'images' %}
-      <div class="row">
-            {% for item in object_list %}
-                <div class="col l3 m5 s12">
-                    <div class="personal-card">
-                        <div class="col s12">
-                            <div class="header">
-                                {% if item.profile.backImage %}
-                                    <img class="back-profile-user" src="{{ item.profile.backImage.url }}">
-                                {% else %}
-                                    <img class="back-profile-user" src="{{ STATIC_URL }}img/nuevo_back.png">
-                                {% endif %}
-                                <i class="fa fa-user fa-2x like-him">
-                                </i>
-                                <div class="bg-user">
-                                    <div onclick="location.href='/profile/{{ item.author }}'"
-                                         class="profile-user-bg">{% avatar item.author %}</div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col s12">
-                            <div style="cursor: default" onclick="location.href='{% url "publications:publication_detail" publication_id=item.pk %}'" class="name-friend">
-                                <p>{{ item.title }}</p>
-                                <img width="100%" src="{{ MEDIA_URL }}{{ item.url_image }}">
-                            </div>
-                        </div>
+    <div class="row">
+        {% for item in object_list %}
+        <div class="col l2 m12 s12 image-div">
+            <div class="container-image">
+                <div class="principal-content">
+                    {% if item.object.tags.all %}
+                    <div class="tags-content">
+                        {% for tag in item.object.tags.all %}
+                        <blockquote
+                            onclick="location.href='{% url 'photologue:collection-list' item.author tag.name %}'">{{ tag.name }}</blockquote>
+                        {% endfor %}
+                    </div>
+                    {% endif %}
+                    <img class="lazyload" data-src="
+                    {% if item.thumbnail %}/media/{{ item.thumbnail }}{% elif item.url_image %}/media/{{ item.url_image }}{% else %}{{ item.external_image }}{% endif %}"
+                    alt="{{ item.title }}" title="{{ item.title }}"
+                    onclick="location.href='/photo/{{ item.slug }}'">
+                </div>
+                <div class="col s12 legend-content">
+                    <div class="legend-user-image">
+                        {% avatar item.author %}
+                    </div>
+                    <div class="col l8 m8 s8 legend-user-data">
+                        <a href="/profile/{{ item.author }}">@{{ item.author }}</a>
+                        <i class="photo-title truncate">{{ item.title }}</i>
+                        <i class="truncate photo-date"><i class="fa fa-clock-o"
+                                aria-hidden="true"></i> {{ item.date|naturaltime }}</i>
                     </div>
                 </div>
-            {% endfor %}
+            </div>
         </div>
+        {% endfor %}
+    </div>
     {% endif %}
 
     {% if s == 'videos' %}
-      <div class="row">
+    <div class="row">
         {% for result in object_list %}
-          <div class="col l3 m5 s12">
-                    <div class="personal-card">
-                        <div class="col s12">
-                            <div class="header">
-                            <a href="{{ result.object.get_absolute_url }}">{{ result.author }}</a>
-                            </div>
-                        </div>
-                        <div class="col s12">
-                          <p>
-                              <a href="{{ result.object.get_absolute_url }}">{{ result.text }}</a>
-                              {{ result.pub_date }}
-                          </p>
-                        </div>
+        <div class="col l3 m5 s12">
+            <div class="personal-card">
+                <div class="col s12">
+                    <div class="header">
+                        <a href="{{ result.object.get_absolute_url }}">{{ result.author }}</a>
                     </div>
-          </div>
+                </div>
+                <div class="col s12">
+                    <p>
+                        <a href="{{ result.object.get_absolute_url }}">{{ result.text }}</a>
+                        {{ result.pub_date }}
+                    </p>
+                </div>
+            </div>
+        </div>
         {% endfor %}
         {% if page.has_previous or page.has_next %}
-            <div>
-                {% if page.has_previous %}<a href="?q={{ query }}&amp;page={{ page.previous_page_number }}">{% endif %}&laquo; Previous{% if page.has_previous %}</a>{% endif %}
-                |
-                {% if page.has_next %}<a href="?q={{ query }}&amp;page={{ page.next_page_number }}">{% endif %}Next &raquo;{% if page.has_next %}</a>{% endif %}
-            </div>
+        <div>
+            {% if page.has_previous %}<a href="?q={{ query }}&amp;page={{ page.previous_page_number }}">{% endif %}&laquo; Previous{% if page.has_previous %}</a>{% endif %}
+            |
+            {% if page.has_next %}<a href="?q={{ query }}&amp;page={{ page.next_page_number }}">{% endif %}Next &raquo;{% if page.has_next %}</a>{% endif %}
+        </div>
         {% endif %}
-      </div>
+    </div>
     {% endif %}
-  </div>
-    <script async src="{{ STATIC_URL }}js/search.js"></script>
-    <script async src="{{ STATIC_URL }}js/photo_gallery.js" type="text/javascript"></script>
+</div>
+<script async src="{{ STATIC_URL }}js/search.js"></script>
+<script async src="{{ STATIC_URL }}js/photo_gallery.js" type="text/javascript"></script>
 {% endblock %}
